Did a pass on font types and font weights to ensure that it better aligns with the design documentation.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Oswald:wght@400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -15,6 +17,8 @@
   --color-grey1: #333333;
   --color-grey2: #808080;
   --color-grey3: #f2f2f2;
+  --font-default: "Montserrat", sans-serif;
+  --font-condensed: "Oswald", sans-serif;
 }
 
 @theme inline {
